@@ -1,3 +1,7 @@
+2002-08-08  Paul D. Smith  <psmith@gnu.org>
+
+	* LINGUAS: Add a new translation for Chinese (simplified) (zh_CN).
+
 2002-08-02  Paul D. Smith  <psmith@gnu.org>
 
 	* LINGUAS: Add a new translation for Swedish (sv).
